package org.example.entities;

public class Cliente {
}
