package main.java.org.example.entities;

public class Factura {
}
